# .pm3-reader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flagsremover.bat  table_example.xlsx
assets/: app.html  styles.css
assets/js/: script.js
devfiles/: bytes_func.cpp  bytes_func.h  exel_func.cpp  exel_func.h  image_utils.cpp  image_utils.h  main.cpp  pm3_format.txt
src/: MyApp.cpp
src/pm3-reader/: bmp_preview.cpp  bmp_preview.h  file_func.cpp  file_func.h
